[gd_scene load_steps=3 format=3 uid="uid://bvhny66vw8bs"]

[ext_resource type="Script" path="res://scenes/menu/deckbuilder.gd" id="1_hiyso"]
[ext_resource type="PackedScene" uid="uid://b7di8plutlm5b" path="res://scenes/game/card_popout.tscn" id="2_vg3i0"]

[node name="Deckbuilder" type="Node2D"]
script = ExtResource("1_hiyso")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0.466667, 0.545098, 1)

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = 4.0
offset_top = 66.0
offset_right = 802.0
offset_bottom = 713.0

[node name="ReturnToMenuButton" type="Button" parent="."]
offset_left = 938.0
offset_top = 6.0
offset_right = 1275.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 32
text = "Return to Main Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 10.0
offset_right = 503.0
offset_bottom = 52.0
theme_override_constants/separation = 50

[node name="LoadDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Load Deck"

[node name="NewDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "New Deck"

[node name="DeleteDeckButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Delete Deck"

[node name="CardPopout" parent="." instance=ExtResource("2_vg3i0")]
visible = false

[connection signal="pressed" from="ReturnToMenuButton" to="." method="back_to_main_menu"]
[connection signal="pressed" from="HBoxContainer/LoadDeckButton" to="." method="_on_load_deck_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NewDeckButton" to="." method="_on_new_deck_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteDeckButton" to="." method="_on_delete_deck_button_pressed"]
